--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ input {
     border: 1px solid #FF6464;
 }
 
-img {
+.Imagem1 {
     width: 500px;
     height: auto;
     align-self: center;
@@ -179,7 +179,7 @@ img {
     font-family: Roboto, sans-serif;
     color:#1C1E53;
     line-height: 1.6;
-    padding-top: 150px;
+    padding-top: 100px;
     padding-left: 50px;
 }
 
@@ -198,7 +198,6 @@ img {
 /* Estilo dos projetos */
 .projeto {
     margin: 20px auto;
-    padding: 20px;
 }
 
 /* Título do projeto */
@@ -230,10 +229,9 @@ img {
 footer {
     background-color: #FF646480;
     color: white;
-    text-align: center;
-    padding: 10px;
-    width: 100%;
-    height: 100px;
-    bottom: 0;
+    padding: 60px;
 }
 
+.img-linkedin {
+    width: 30px;
+}
